Skips the boss fight to ending lasers.

--- a/Modified/ze_deadcore_s7.cfg
+++ b/Modified/ze_deadcore_s7.cfg
@@ -1,6 +1,6 @@
 
 ;=====================================
-; Training Mode
+; Training Mode (works only Stage D + training mode)
 ;=====================================
 modify:
 {
