--- a/Modified/ze_dreamin_v2_3s.cfg
+++ b/Modified/ze_dreamin_v2_3s.cfg
@@ -246,7 +246,7 @@ add:
 ;=================================================================
 ; CFG Stripper by
 ; ZombieFeyk - https://steamcommunity.com/id/zombiefeyk159753/
-; Perfect - https://steamcommunity.com/id/Perfect_sg
+; Perfect - https://steamcommunity.com/id/Perfect_lg/
 ;=================================================================
 ;===================================================================================================================
 ; Give's you a Kevlar when entering boss fight, delete this half code, it was maded specially for SibGamers Server
