Little fix description

--- a/Modified/zm_lila_panic_173.cfg
+++ b/Modified/zm_lila_panic_173.cfg
@@ -39,7 +39,7 @@ add:
 ;=======
 
 ;=======
-; верх 
+; UP TELEPORT
 ;=======
 
 add:
@@ -61,7 +61,7 @@ add:
 	"classname" "trigger_teleport"
 }
  ;=======
-; ammo
+; AMMO
 ;=======
 
 add:
@@ -72,7 +72,7 @@ add:
 }
 
 ;=======
-; teleport
+; TELEPORT
 ;=======
 
 add:
@@ -117,7 +117,7 @@ add:
 
 
 ;=======
-; teleports
+; TELEPORT
 ;=======
   
 add:
@@ -141,7 +141,7 @@ add:
 }
 
 ;=======
-; props
+; PROPS
 ;=======
 
 filter:
