update credit and removed useless code

--- a/Modified/ze_dreamin_v2_3s.cfg
+++ b/Modified/ze_dreamin_v2_3s.cfg
@@ -245,86 +245,9 @@ add:
 
 ;=================================================================
 ; CFG Stripper by
-; ZombieFeyk - https://steamcommunity.com/id/zombiefeyk159753/
-; Perfect - https://steamcommunity.com/id/Perfect_lg/
+; Feykich - https://steamcommunity.com/profiles/76561198347422072
+; Perf - https://steamcommunity.com/profiles/76561198327390265
 ;=================================================================
-;===================================================================================================================
-; Give's you a Kevlar when entering boss fight, delete this half code, it was maded specially for SibGamers Server
-;===================================================================================================================
-add:
-{
-	"classname" 	"game_player_equip"
-	"targetname" 	"kevlar_equip_after_boss"
-	"origin"		"-5734 7392 4750"
-	"item_kevlar"	"1"
-	"weapon_knife" 	"1"
-}
-
-modify:
-{
-	match:
-	{
-		"classname"		"trigger_teleport"
-		"targetname" 	"boss_teleport"
-	}
-	insert:
-	{
-		"OnStartTouch" 	"kevlar_equip_after_boss,Use,0,-1"
-	}
-}
-
-modify:
-{
-	match:
-	{
-		"classname"		"trigger_teleport"
-		"origin"		"-15424 2144 4080"
-	}
-	insert:
-	{
-		"OnStartTouch"	"kevlar_equip_after_boss,Use,0,-1"
-	}
-}
-
-modify:
-{
-	match:
-	{
-		"classname"		"trigger_teleport"
-		"targetname"	"st3_goto"
-	}
-	insert:
-	{
-		"OnStartTouch"	"kevlar_equip_after_boss,Use,0,-1"
-	}
-}
-
-modify:
-{
-	match:
-	{
-		"classname"		"trigger_multiple"
-		"targetname"	"st3_goto"
-	}
-	insert:
-	{
-		"OnStartTouch"	"kevlar_equip_after_boss,Use,0,-1"
-	}
-}
-
-modify:
-{
-	match:
-	{
-		"classname"		"trigger_teleport"
-		"targetname"	"st3_clearto"
-	}
-	insert:
-	{
-		"OnStartTouch"	"kevlar_equip_after_boss,Use,0,-1"
-	}
-}
-
 
 ;===========================
 ; Rainbow Lasers
