--- a/Modified/zm_lila_panic_173.cfg
+++ b/Modified/zm_lila_panic_173.cfg
@@ -1,8 +1,8 @@
 ;=================================================================================
-;   STRIPPER CONFIG - MODIFIED FOR SIBGAMERS BY.								  
-;  Perfect -  https://steamcommunity.com/profiles/76561198327390265/		  				  
+;  	STRIPPER CONFIG - MODIFIED FOR SIBGAMERS BY.								  
+;  	Perfect -  https://steamcommunity.com/profiles/76561198327390265/		  				  
 ;	THANKS FOR HELP TO - 														  
-; 	hEl - https://steamcommunity.com/id/tk4chuk		  
+; 	hEl - https://steamcommunity.com/profiles/76561198076597137/		  
 ;=================================================================================
 
 add:
