update credit. slightly corrected with space in lines

--- a/Modified/ze_surf_vortex_v1_9s.cfg
+++ b/Modified/ze_surf_vortex_v1_9s.cfg
@@ -1,10 +1,9 @@
 ;=================================================================================
 ;   STRIPPER CONFIG - MODIFIED FOR SIBGAMERS BY.								  
-;	ZombieFeyk - https://steamcommunity.com/id/zombiefeyk159753/				  
-;	sp4ce - https://steamcommunity.com/id/1fkldk							  
+;	Feykich -   https://steamcommunity.com/profiles/76561198347422072/				  
+;	desiredey - https://steamcommunity.com/profiles/76561199420256203/						  
 ;	THANKS FOR HELP TO - 														  
-;	Perfect -  https://steamcommunity.com/profiles/76561198327390265/			  
-;   .Cloud - https://steamcommunity.com/id/makofraggerVII						  
+;	Perf -      https://steamcommunity.com/profiles/76561198327390265/					  
 ;=================================================================================
 
 
@@ -423,13 +422,13 @@ add:
 
 add:
 {
-    "classname"            "point_template"
-    "targetname"           "bladelaserspawnsp"
+    	"classname"            "point_template"
+    	"targetname"           "bladelaserspawnsp"
 	"origin"               "5269 -13257.2 -55"
 	"Template01"           "at_spawn_laser"
 	"Template02"		   "bladespawnh2"
-    "Template03"           "at_spawn_laser_relay"
-    "OnEntitySpawned"	   "at_spawn_laser,Open,,0.01,-1"
+    	"Template03"           "at_spawn_laser_relay"
+    	"OnEntitySpawned"	   "at_spawn_laser,Open,,0.01,-1"
 }
 
 
@@ -621,11 +620,11 @@ add:
 
 add:
 {
-    "classname"    "logic_relay"
-    "targetname"   "at_spawn_theend_relay"
+	"classname"    "logic_relay"
+    	"targetname"   "at_spawn_theend_relay"
 	"StartDisabled" "1"
-    "origin"       "5280 -13273.2 -60"
-    "OnSpawn"      "at_spawn_the_end_1,Open,,0,-1"
+    	"origin"       "5280 -13273.2 -60"
+    	"OnSpawn"      "at_spawn_the_end_1,Open,,0,-1"
 	"OnSpawn"      "at_spawn_the_end_2,Open,,0,-1"
 	"OnSpawn"      "at_spawn_the_end_3,Open,,0,-1"
 	"OnSpawn"      "at_spawn_the_end_4,Open,,0,-1"
@@ -645,8 +644,8 @@ add:
 
 add:
 {
-    "classname"            "point_template"
-    "targetname"           "bladelasertheendsp"
+    	"classname"            "point_template"
+    	"targetname"           "bladelasertheendsp"
 	"origin"               "5269 -13257.2 -55"
 	"Template01"           "at_spawn_the_end_4"
 	"Template02"           "at_spawn_the_end_3"
@@ -654,7 +653,7 @@ add:
 	"Template04"           "at_spawn_the_end_1"
 	"Template05"		   "bladetheendh22"
 	"Template06"           "at_spawn_theend_relay"
-    "OnEntitySpawned"	   "at_spawn_the_end_1,Open,,0.01,-1"
+   	"OnEntitySpawned"	   "at_spawn_the_end_1,Open,,0.01,-1"
 	"OnEntitySpawned"	   "at_spawn_the_end_2,Open,,0.01,-1"
 	"OnEntitySpawned"	   "at_spawn_the_end_3,Open,,0.01,-1"
 	"OnEntitySpawned"	   "at_spawn_the_end_4,Open,,0.01,-1"
