--- a/Fixed/ze_ffvii_cosmo_canyon_v1_1.cfg
+++ b/Fixed/ze_ffvii_cosmo_canyon_v1_1.cfg
@@ -1,6 +1,6 @@
 ;============================================================================
 ; CFG Stripper by
-; ZombieFeyk - https://steamcommunity.com/id/zombiefeyk159753/
+; Feykich - https://steamcommunity.com/profiles/76561198347422072/
 ;============================================================================
 
 ;==============================
